--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -19,18 +19,30 @@
         color:var(--black-color);
     }
 
+    &__menu{
+        display: flex;
+        margin-left: auto;
+        @media screen and (min-width: 768px){
+            display: none; 
+        }
+    }
+
     &__list{
         list-style: none;
         font-weight: 500;
         font-size: 14px;
         line-height: 1.1;
         letter-spacing: 0.02em;
-        display: flex;
+        display: none;
         flex-wrap: wrap;
         padding: 0;
         margin-top: 0;
         margin-bottom: 0;
         gap: 50px;
+
+        @media screen and (min-width: 768px){
+            display: flex; 
+        }
     }
 
     &__link{
