--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,11 @@
 .container{
-    width: 1200px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 1200px){
+        width: 1200px;
+    }
 }
