--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import './utils/variables';
 @import './utils/base';
 @import './utils/utils';
+@import './utils/mixins';
 
 @import './components/activity';
 @import './components/address';
