--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import './components/is-hidden';
 @import './components/logo';
 @import './components/member';
+@import './components/mobile-menu';
 @import './components/modal';
 @import './components/our-team';
 @import './components/overlay';
