--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,18 @@
 .logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
+    font-size: 24px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration: none;
     display: flex;
     flex-wrap: wrap;
+
+
+    @media screen and (min-width: 768px){
+        font-size: 26px;
+        line-height: 1.2; 
+    }
     
         &__accent{
             color: var(--color-accent);
