--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -20,39 +20,75 @@
     padding: 0;
     width: 40px;
     height: 40px;
-    
 }
 
 .mobile-menu__icon {
     background-color: var(--color-background);
-    
 }
 
 .mobile-menu__nav {
+    padding: 0;
+    margin-bottom: 306px;
 }
 .mobile-menu__list {
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-
     color: var(--text-color);
+    margin-bottom: 32px;
+
+
+    &:hover{
+        color: var(--color-accent);
+    }
 }
+
 .mobile-menu__contact {
+    padding: 0;
+    
 }
+
+.mobile-menu__item{
+    margin-bottom: 32px;
+}
+
 .mobile-menu__tel {
     font-weight: 500;
     font-size: 34px;
     line-height: 1.18;
     letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--color-accent);  
+}
+
+.mobile-menu__mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--text-color-optional);
+}
+
+.mobile-menu__networks {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin-top: 64px;
+}
+
+.mobile-menu__link {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 
     color: var(--color-accent);
 }
-.mobile-menu__mail {
-}
-.mobile-menu__networks {
-}
-.mobile-menu__box {
-}
-.mobile-menu__link {
+
+.mobile-menu__token{
+    color: rgba(33, 33, 33, 0.2);
+    margin: 0 10px;
 }
