--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -24,6 +24,10 @@
         &:hover{color:var(--color-accent)}
 
         &:focus{color:var(--color-accent)}
+
+        @media screen and (min-width: 768px){
+            padding: 5px 0; 
+        }
         
     }
     
