--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,6 +6,9 @@
         display: flex;
         margin: 10px 0;
 
+        @media screen and (min-width: 768px){
+            margin: 0; 
+        }
     }
 
     &__nav{
@@ -28,15 +31,14 @@
         padding: 0;
         width: 40px;
         height: 40px;
-
-
+        
         @media screen and (min-width: 768px){
             display: none; 
         }
     }
 
     &__icon{
-        background-color: var(--color-background);
+        background-color: var(--color-background);      
     }
 
     &__list{
@@ -85,7 +87,11 @@
             height: 4px;
             background-color: currentColor;
             border-radius: 2px;
-            margin-top: 28px;
+            margin-top: 37px;
+
+            @media screen and (min-width: 1200px){
+                margin-top: 28px;
+            }
         }
     
     }
@@ -96,6 +102,16 @@
         margin-top: 0;
         margin-bottom: 0;
         gap: 50px;
+
+        @media screen and (min-width: 768px){
+            display: inline-block;
+            margin-top: 21px;
+            margin-bottom: 21px;
+        }
+
+        @media screen and (min-width: 1200px){
+            display: flex;
+        }
     }
     }
 
