--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,6 +9,12 @@
         @media screen and (min-width: 768px){
             margin: 0; 
         }
+
+        @media screen and (min-width: 1200px){
+            margin: 0;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     &__nav{
