--- a/sass/components/_member.scss
+++ b/sass/components/_member.scss
@@ -3,8 +3,9 @@
     border-radius: 0px 0px 4px 4px;
     background-color: var(--color-background);
     
-    &:not(:last-child){
+    @media screen and (max-width: 767px){
         margin-right: 30px;
+        margin-bottom: 30px;
     }
 
     &__image{
