--- a/sass/components/_section-third.scss
+++ b/sass/components/_section-third.scss
@@ -1,5 +1,10 @@
 .third{
     padding-top: 0;
+    display: none;
+
+    @media screen and (min-width: 1200px){  
+        display: block;
+    }
     
     &__title{
         font-weight: 700;
