--- a/css/main.css
+++ b/css/main.css
@@ -73,8 +73,14 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 ul {
@@ -178,17 +184,46 @@ ul {
 
 .advantages {
   margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   padding: 0;
   list-style: none;
 }
-.advantages__item {
-  width: 270px;
+@media screen and (min-width: 768px) {
+  .advantages {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
-.advantages__item:not(:last-child) {
-  margin-right: 30px;
+.advantages__item {
+  max-width: 450px;
+}
+@media screen and (max-width: 767px) {
+  .advantages__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages__item {
+    max-width: 354px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advantages__item {
+    width: 270px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 .advantages__subtitle {
   font-weight: 700;
@@ -342,6 +377,16 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .container {
@@ -535,7 +580,7 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 10px 0;
+  margin-left: 0;
 }
 @media screen and (min-width: 768px) {
   .header__container {
@@ -566,10 +611,9 @@ ul {
   color: var(--black-color);
 }
 .header__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   border: none;
   padding: 0;
   width: 40px;
@@ -582,6 +626,12 @@ ul {
 }
 .header__icon {
   background-color: var(--color-background);
+  fill: var(--text-color);
+  -webkit-transition: fill var(--timing-duration) cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--timing-duration) cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__icon:hover {
+  fill: var(--color-accent);
 }
 .header__list {
   list-style: none;
@@ -592,7 +642,6 @@ ul {
   display: none;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 0;
   margin-top: 0;
   margin-bottom: 0;
   gap: 50px;
@@ -602,6 +651,11 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__list {
+    padding: 0;
   }
 }
 .header__link {
@@ -727,6 +781,13 @@ ul {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+@media screen and (max-width: 768px) {
+  .logo {
+    font-size: 24px;
+    line-height: 1.16;
+    margin: 16px 0 16px 15px;
+  }
+}
 @media screen and (min-width: 768px) {
   .logo {
     font-size: 26px;
@@ -743,8 +804,11 @@ ul {
   border-radius: 0px 0px 4px 4px;
   background-color: var(--color-background);
 }
-.member:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .member {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
 }
 .member__image {
   border-radius: 0px;
@@ -801,6 +865,12 @@ ul {
 
 .mobile-menu__icon {
   background-color: var(--color-background);
+  fill: var(--text-color);
+  -webkit-transition: fill var(--timing-duration) cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--timing-duration) cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu__icon:hover {
+  fill: var(--color-accent);
 }
 
 .mobile-menu__nav {
@@ -1006,19 +1076,37 @@ ul {
 }
 .team__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 50px;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.2;
+    margin-bottom: 30px;
+  }
+}
 .team__card {
   margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   padding: 0;
   list-style: none;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .team__card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .overlay__link {
@@ -1141,6 +1229,12 @@ ul {
 
 .third {
   padding-top: 0;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .third {
+    display: block;
+  }
 }
 .third__title {
   font-weight: 700;
