--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,6 +5,14 @@
     margin-left: auto;
     margin-right: auto;
 
+    @media screen and (min-width: 480px){
+        width: 480px;
+    }
+
+    @media screen and (min-width: 768px){
+        width: 768px;
+    }
+
     @media screen and (min-width: 1200px){
         width: 1200px;
     }
