--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,7 +4,7 @@
     
     &__container{
         display: flex;
-        margin: 10px 0;
+        margin-left: 0;
 
         @media screen and (min-width: 768px){
             margin: 0; 
@@ -31,20 +31,27 @@
     }
 
     &__menu{
-        display: flex;
-        margin-left: auto;
+        position: absolute;
+        top: 10px;
+        right: 10px;
         border: none;
         padding: 0;
         width: 40px;
         height: 40px;
-        
+           
         @media screen and (min-width: 768px){
             display: none; 
         }
     }
 
     &__icon{
-        background-color: var(--color-background);      
+        background-color: var(--color-background);
+        fill: var(--text-color);
+        transition: fill var(--timing-duration) cubic-bezier(0.4, 0, 0.2, 1);
+        
+        &:hover{
+            fill: var(--color-accent);
+        }
     }
 
     &__list{
@@ -55,13 +62,16 @@
         letter-spacing: 0.02em;
         display: none;
         flex-wrap: wrap;
-        padding: 0;
         margin-top: 0;
         margin-bottom: 0;
         gap: 50px;
 
         @media screen and (min-width: 768px){
             display: flex; 
+        }
+
+        @media screen and (min-width: 1200px){
+            padding: 0;
         }
     }
 
