--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -1,19 +1,35 @@
 .team{
     background-color: var(--color-background-color);
     display: flex;
+
+ 
     
     &__title{
         font-weight: 700;
-        font-size: 36px;
-        line-height: 1.2;
+        font-size: 28px;
+        line-height: 1.18;
         letter-spacing: 0.03em;
         text-align: center;
         margin-bottom: 50px;
+
+        @media screen and (min-width: 768px) and (max-width: 1199px){
+            font-size: 36px;
+            line-height: 1.2;
+            margin-bottom: 30px;
+        }
     }
+
     &__card{
         margin: 0;
-        display: flex;
+        display: block;
         padding: 0;
         list-style: none;
+        gap: 30px;
+
+        @media screen and (min-width: 768px){
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
-    }
+}
