--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -22,8 +22,13 @@ body{
     }
     
     .section {
-        padding-top: 94px;
-        padding-bottom: 94px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+
+        @media screen and (min-width: 1200px){
+          padding-top: 94px;
+          padding-bottom: 94px; 
+      }
     }
     
     ul{list-style: none;}
