--- a/sass/components/_member.scss
+++ b/sass/components/_member.scss
@@ -4,8 +4,11 @@
     background-color: var(--color-background);
     
     @media screen and (max-width: 767px){
-        margin-right: 30px;
         margin-bottom: 30px;
+    }
+
+    @media screen and (mшт-width: 768px){
+        margin-right: 30px;
     }
 
     &__image{
