--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --color-brend:#2f303a;
   --color-accent:#2196f3;
@@ -810,7 +809,7 @@ ul {
     margin-bottom: 30px;
   }
 }
-@media screen and (mшт-width: 768px) {
+@media screen and (min-width: 768px) {
   .member {
     margin-right: 30px;
   }
