--- a/sass/components/_member.scss
+++ b/sass/components/_member.scss
@@ -7,7 +7,7 @@
         margin-bottom: 30px;
     }
 
-    @media screen and (mшт-width: 768px){
+    @media screen and (min-width: 768px){
         margin-right: 30px;
     }
 
