--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -31,5 +31,9 @@
             flex-wrap: wrap;
             justify-content: center;
         }
+
+        @media screen and (min-width: 1200px){
+            flex-wrap:nowrap;
+        }
     }
 }
