--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -7,19 +7,44 @@
         letter-spacing: 0.03em;
         text-align: center;
         margin-bottom: 50px;
+
+        @media screen and (min-width: 768px) and (max-width: 1199px){
+            font-size: 36px;
+            line-height: 1.2;
+            margin-bottom: 30px;
+        }
     }
    
     &__list {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 30px;
         padding: 0;
         margin: 0;
+
+        @media screen and (min-width: 768px){
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        @media screen and (min-width: 1200px){
+            flex-wrap:nowrap;
+        }
     }
 
     &__box{
-        width: 170px;
+        width: 210px;
         height: 92px;
+
+        @media screen and (min-width: 768px){
+            width: 226px;
+        }
+
+        @media screen and (min-width: 1200px){
+            width: 170px;
+        }
     }
 
     &__link {
