--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,11 @@ body {
   font-family: "Roboto", sans-serif;
   color: var(--text-color);
 }
+@media screen and (max-width: 1199px) {
+  body {
+    margin: 0;
+  }
+}
 
 h1,
 h2,
@@ -123,10 +128,30 @@ ul {
 .address {
   text-decoration: none;
 }
+@media screen and (max-width: 1199px) {
+  .address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 .address__card {
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+@media screen and (max-width: 1199px) {
+  .address__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .address__item:not(:last-child) {
   margin-bottom: 9px;
@@ -497,12 +522,17 @@ ul {
   padding-bottom: 60px;
 }
 .footer__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+}
+@media screen and (min-width: 1200px) {
+  .footer__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 .footer__logo {
   font-family: "Raleway", sans-serif;
@@ -516,11 +546,18 @@ ul {
 .footer__address {
   margin-top: 20px;
 }
-.footer__social-box {
-  margin-left: 70px;
+@media screen and (min-width: 1200px) {
+  .footer__social-box {
+    margin-left: 70px;
+  }
 }
 .footer__social-title {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -529,15 +566,37 @@ ul {
   color: var(--color-background);
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .footer__social-title {
+    display: block;
+  }
+}
 .footer__social-list {
   gap: 10px;
   margin: 0;
+}
+@media screen and (max-width: 1199px) {
+  .footer__social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .footer__e-mail-input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-left: auto;
+}
+@media screen and (max-width: 1199px) {
+  .footer__e-mail-input {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .footer__label {
   display: -webkit-box;
@@ -550,16 +609,32 @@ ul {
   text-transform: uppercase;
   color: var(--color-background);
 }
+@media screen and (max-width: 1199px) {
+  .footer__label {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 .footer__form-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-top: 20px;
 }
+@media screen and (max-width: 1199px) {
+  .footer__form-box {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 .footer__input {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -580,6 +655,21 @@ ul {
           align-items: center;
   background-color: transparent;
   margin-right: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    width: 358px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer__button-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .footer__input-button {
   width: 200px;
@@ -829,6 +919,13 @@ ul {
   .logo {
     font-size: 26px;
     line-height: 1.2;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .logo {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .logo__accent {
