--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,8 +6,12 @@
     padding-bottom: 60px;
     
     &__box{
-        display: flex;
+        display: block;
         align-items: baseline;
+
+        @media screen and (min-width: 1200px){
+            display: flex;
+        }
     }
 
     &__logo{
@@ -25,11 +29,16 @@
     }
 
     &__social-box{
-        margin-left: 70px;
+        
+
+        @media screen and (min-width: 1200px){
+            margin-left: 70px;
+        }
     }
 
     &__social-title{
-        display: block;
+        display: flex;
+        justify-content: center;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.1;
@@ -37,16 +46,30 @@
         text-transform: uppercase;
         color: var(--color-background);
         margin-bottom: 20px;
+
+        @media screen and (min-width: 1200px){
+            display: block;
+        }
     }
 
     &__social-list {
         gap: 10px;
         margin: 0;
+
+        @media screen and (max-width: 1199px){
+            display: flex;
+            justify-content: center;
+        }
     }
 
     &__e-mail-input {
         display: flex;
         margin-left: auto;
+
+        @media screen and (max-width: 1199px){
+            justify-content: center;
+        }
+
     }
 
     &__label {
@@ -56,17 +79,26 @@
         line-height: 1.14;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: var(--color-background); 
+        color: var(--color-background);
+
+        @media screen and (max-width: 1199px){
+            justify-content: center;
+        }
     }
 
     &__form-box{
         display: flex;
         margin-top: 20px;
+
+        @media screen and (max-width: 1199px){
+            justify-content: center;
+            flex-wrap: wrap;
+        }
     }
 
     &__input {
         box-sizing: border-box;
-        width: 358px;
+        width: 100%;
         height: 50px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -82,6 +114,17 @@
         align-items: center;
         background-color: transparent;
         margin-right: 12px;
+
+        @media screen and (min-width: 1200px){
+            width: 358px;
+        }
+    }
+
+    &__button-box{
+        @media screen and (max-width: 1199px){
+            display: flex;
+            justify-content: center;
+        }
     }
 
     &__input-button {
