--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,6 +14,18 @@
         }
     }
 
+    &__nav-box{
+        @media screen and (min-width: 768px){
+           display: flex; 
+        }
+    }
+
+    &__address-box{
+        @media screen and (min-width: 768px) and (max-width: 1199px){
+            margin-left: 76px;
+        }
+    }
+
     &__logo{
         font-family: 'Raleway', sans-serif;
         color:var(--color-background);
@@ -29,10 +41,16 @@
     }
 
     &__social-box{
+        margin-top: 60px;
         
+        @media screen and (min-width: 768px) and (max-width: 1199px){
+            margin-top: 30px;
+            margin-left: 165px;
+        }
 
         @media screen and (min-width: 1200px){
             margin-left: 70px;
+            margin-top: 10px;
         }
     }
 
@@ -65,6 +83,7 @@
     &__e-mail-input {
         display: flex;
         margin-left: auto;
+        margin-top: 60px;
 
         @media screen and (max-width: 1199px){
             justify-content: center;
@@ -121,9 +140,11 @@
     }
 
     &__button-box{
+
         @media screen and (max-width: 1199px){
             display: flex;
             justify-content: center;
+            margin-top: 20px;
         }
     }
 
