--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,27 +3,37 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     background-color: var(--color-background-hero);
     background-image:linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../images/img\(21\).jpg);
     background-repeat: no-repeat;
     background-size: 1600px;
     background-position: center;
-    width: 1600px;
     margin: auto;
+
+    @media screen and (min-width: 1200px){
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
 
     
     &__title{
         text-transform: uppercase;
         font-weight: 900;
-        font-size: 44px;
-        line-height: 1.4;
+        font-size: 26px;
+        line-height: 1.61;
         color: var(--color-background);
         text-align: center;
         letter-spacing: 0.06em;
-        max-width: 696px;
+        max-width: 360px;
         margin: 0 auto 30px;
+
+        @media screen and (min-width: 1200px){
+            font-size: 44px;
+            line-height: 1.4;
+            max-width: 696px;
+        }
 }
 
     &__button{
