--- a/css/main.css
+++ b/css/main.css
@@ -286,8 +286,6 @@ ul {
 
 .checkbox {
   position: absolute;
-  left: 52px;
-  top: 458px;
 }
 .checkbox__input {
   -webkit-appearance: none;
@@ -1117,24 +1115,33 @@ ul {
 
 .modal {
   position: absolute;
-  width: 528px;
-  max-height: 581px;
-  height: 100%;
+  width: 450px;
+  height: 609px;
   background-color: var(--color-background);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
 }
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
 .modal__title {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-top: 2px;
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+  }
 }
 .modal__label {
   display: block;
@@ -1195,15 +1202,20 @@ ul {
 .modal__textarea:focus {
   border-color: var(--color-accent);
 }
-.modal__label {
+.modal__checkbox {
   position: relative;
   padding-left: 28px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--text-color-optional);
-  left: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__checkbox {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 .modal__link {
   color: var(--color-accent);
