--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,22 +1,29 @@
 .modal{
     position: absolute;
-    width: 528px;
-    max-height: 581px;
-    height: 100%;
+    width: 450px;
+    height: 609px;
     background-color: var(--color-background);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 40px;
+
+    @media screen and (min-width: 1200px){
+        width: 528px;
+        height: 581px;
+    }
     
     &__title{
         font-style: normal;
         font-weight: 700;
         font-size: 20px;
-        line-height: 1.15;
+        line-height: 1.5;
         text-align: center;
         letter-spacing: 0.03em;
-        margin-top: 2px;
         margin-bottom: 12px;
+
+        @media screen and (min-width: 1200px){
+            line-height: 1.15;
+        }
     }
 
     &__label{
@@ -81,15 +88,19 @@
         }
     }
 
-    &__label{
+    &__checkbox{
         position: relative;
         padding-left: 28px;
         font-weight: 400;
-        font-size: 14px;
-        line-height: 1.7;
+        font-size: 12px;
+        line-height: 1.16;
         letter-spacing: 0.03em;
         color: var(--text-color-optional);
-        left: 8px;
+
+        @media screen and (min-width: 1200px){
+            font-size: 14px;
+            line-height: 1.7;
+        }
     }
 
     &__link{
