--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,6 +13,7 @@
     --color-border: #afb1b8;
 
     --timing-duration: 250ms;
+    --gradient: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4));
 
     --logo-font-family: @font-face {
                         font-family: "Raleway";
