--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,13 +6,33 @@
     padding-top: 118px;
     padding-bottom: 118px;
     background-color: var(--color-background-hero);
-    background-image:linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../images/img\(21\).jpg);
     background-repeat: no-repeat;
     background-size: 1600px;
     background-position: center;
     margin: auto;
 
-    @media screen and (min-width: 1200px){
+    @media screen and (max-width: 767px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+        background-image: var(--gradient), url(/./images/heromobile@2x.jpg);
+    }
+    
+    @media screen and (max-width: 767px) {
+        background-image: var(--gradient), url(/./images/heromobile@1x.jpg);
+    }
+    
+    @media screen and (min-width: 768px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+        background-image: var(--gradient), url(/./images/herotablet@2x.jpg);
+    }
+    
+    @media screen and (min-width: 768px) {
+        background-image: var(--gradient), url(/./images/herotablet@1x.jpg);
+    }
+    
+    @media screen and (min-width: 1200px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+        background-image: var(--gradient), url(/./images/herodesktop@2x.jpg);
+    }
+    
+    @media screen and (min-width: 1200px) {
+        background-image: var(--gradient), url(/./images/herodesktop@1x.jpg);
         padding-top: 200px;
         padding-bottom: 200px;
     }
