--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,12 +6,13 @@
     padding-top: 118px;
     padding-bottom: 118px;
     background-color: var(--color-background-hero);
+    background-image: var(--gradient), url(/./images/heromobile@1x.jpg);
     background-repeat: no-repeat;
     background-size: 1600px;
     background-position: center;
     margin: auto;
 
-    @media screen and (max-width: 767px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+    @media screen and (max-width: 767px), screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: var(--gradient), url(/./images/heromobile@2x.jpg);
     }
     
@@ -19,7 +20,7 @@
         background-image: var(--gradient), url(/./images/heromobile@1x.jpg);
     }
     
-    @media screen and (min-width: 768px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+    @media screen and (min-width: 768px), screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: var(--gradient), url(/./images/herotablet@2x.jpg);
     }
     
@@ -27,7 +28,7 @@
         background-image: var(--gradient), url(/./images/herotablet@1x.jpg);
     }
     
-    @media screen and (min-width: 1200px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+    @media screen and (min-width: 1200px), screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: var(--gradient), url(/./images/herodesktop@2x.jpg);
     }
     
