--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,7 +3,7 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    background-image: var(--gradient), url(../../images/heromobile@1x.jpg);
+    background-image: var(--gradient), url(../images/heromobile@1x.jpg);
     background-size: cover;
     padding-top: 118px;
     padding-bottom: 118px;
@@ -14,23 +14,23 @@
     margin: auto;
 
     @media screen and (max-width: 767px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx){
-        background-image: var(--gradient), url(../../images/heromobile@2x.jpg);
+        background-image: var(--gradient), url(../images/heromobile@2x.jpg);
     };
     
     @media screen and (min-width: 768px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-        background-image: var(--gradient), url(../../images/herotablet@2x.jpg);
+        background-image: var(--gradient), url(../images/herotablet@2x.jpg);
     };
     
     @media screen and (min-width: 768px) {
-        background-image: var(--gradient), url(../../images/herotablet@1x.jpg);
+        background-image: var(--gradient), url(../images/herotablet@1x.jpg);
     };
     
     @media screen and (min-width: 1200px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-        background-image: var(--gradient), url(../../images/herodesktop@2x.jpg);
+        background-image: var(--gradient), url(../images/herodesktop@2x.jpg);
     };
     
     @media screen and (min-width: 1200px) {
-        background-image: var(--gradient), url(../../images/herodesktop@1x.jpg);
+        background-image: var(--gradient), url(../images/herodesktop@1x.jpg);
         padding-top: 200px;
         padding-bottom: 200px;
     };
