--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,8 +3,8 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    background-image: var(--gradient), url(../images/heromobile@1x.jpg);
-    background-size: cover;
+    // background-image: var(--gradient), url(../images/heromobile@1x.jpg);
+    // background-size: cover;
     padding-top: 118px;
     padding-bottom: 118px;
     background-color: var(--color-background-hero);
@@ -13,7 +13,9 @@
     background-position: center;
     margin: auto;
 
-    @media screen and (max-width: 767px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx){
+    @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+    screen and (min-resolution: 192dpi) and (max-width: 767px),
+    screen and (min-resolution: 2dppx) and (max-width: 767px){
         background-image: var(--gradient), url(../images/heromobile@2x.jpg);
         background-size: cover;
     };
@@ -23,7 +25,9 @@
         background-size: cover;
       }
     
-    @media screen and (min-width: 768px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+      @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+      screen and (min-resolution: 192dpi) and (min-width: 768px),
+      screen and (min-resolution: 2dppx) and (min-width: 768px) {
         background-image: var(--gradient), url(../images/herotablet@2x.jpg);
         background-size: cover;
     };
@@ -33,7 +37,9 @@
         background-size: cover;
     };
     
-    @media screen and (min-width: 1200px), screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+    screen and (min-resolution: 192dpi) and (min-width: 1200px),
+    screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         background-image: var(--gradient), url(../images/herodesktop@2x.jpg);
         background-size: cover;
     };
