--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     align-items: center;
     padding: 0;
+    margin-left: auto;
 
     @media screen and (min-width: 768px){
         display: flex; 
@@ -18,7 +19,7 @@
         color: var(--text-color-optional);
         display: flex;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
         transition: color var(--timing-duration) cubic-bezier(0.4, 0, 0.2, 1); 
     
         &:hover{color:var(--color-accent)}
