--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,11 @@
     border-radius: 4px;
     padding: 40px;
 
+    @media screen and (max-width: 480px){
+        width: 350px;
+        height: 581px;
+    }
+
     @media screen and (min-width: 1200px){
         width: 528px;
         height: 581px;
@@ -20,6 +25,11 @@
         text-align: center;
         letter-spacing: 0.03em;
         margin-bottom: 12px;
+
+        @media screen and (max-width: 480px){
+            font-size: 15px;
+            margin-bottom: 10px;
+        }
 
         @media screen and (min-width: 1200px){
             line-height: 1.15;
