--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -35,6 +35,10 @@
 .mobile-menu__nav {
     padding: 0;
     margin-bottom: 306px;
+
+    @media screen and (max-width: 480px){
+        margin-bottom: 206px;
+    }
 }
 .mobile-menu__list {
     font-weight: 500;
@@ -50,6 +54,10 @@
 
     &:hover{
         color: var(--color-accent);
+    }
+
+    @media screen and (max-width: 480px){
+        font-size: 35px;
     }
 }
 
@@ -68,7 +76,11 @@
     line-height: 1.18;
     letter-spacing: 0.02em;
     text-decoration: none;
-    color: var(--color-accent);  
+    color: var(--color-accent);
+
+    @media screen and (max-width: 480px){
+        font-size: 29px;
+    }
 }
 
 .mobile-menu__mail {
@@ -78,6 +90,10 @@
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--text-color-optional);
+
+    @media screen and (max-width: 480px){
+        font-size: 20px;
+    }
 }
 
 .mobile-menu__networks {
@@ -95,6 +111,10 @@
     letter-spacing: 0.02em;
 
     color: var(--color-accent);
+
+    @media screen and (max-width: 480px){
+        font-size: 13px;
+    }
 }
 
 .mobile-menu__token{
